# PersonaCore

./: .gitignore  README.md  pyproject.toml
docs/: CONFIGURATION_MODEL.md  CONSUMER_RELEASE_PROPAGATION.md  CONSUMER_SHARED_UI_CUTOVER_AUDIT.md  FEATURE_EXTRACTION_PLAN.md  OPEN_QUESTIONS.md  PERSONACONSOLE_DIRECTION.md  PERSONACORE_DIRECTION.md  PUBLIC_RELEASE.md  REFERENCE_ADMIN_PARITY_SPEC.md  REFERENCE_CONSOLE_BACKLOG.md  RELEASE_1.0.10.md  RELEASE_1.0.11.md  RELEASE_1.0.12.md  RELEASE_1.0.13.md  RELEASE_1.0.14.md  RELEASE_1.0.15.md  RELEASE_1.0.16.md  RELEASE_1.0.17.md  RELEASE_1.0.18.md  RELEASE_1.0.19.md  RELEASE_1.0.2.md  RELEASE_1.0.20.md  RELEASE_1.0.21.md  RELEASE_1.0.22.md  RELEASE_1.0.23.md  RELEASE_1.0.24.md  RELEASE_1.0.25.md  RELEASE_1.0.26.md  RELEASE_1.0.27.md  RELEASE_1.0.28.md  RELEASE_1.0.29.md  RELEASE_1.0.3.md  RELEASE_1.0.30.md  RELEASE_1.0.31.md  RELEASE_1.0.32.md  RELEASE_1.0.33.md  RELEASE_1.0.34.md  RELEASE_1.0.35.md  RELEASE_1.0.36.md  RELEASE_1.0.37.md  (+18 more)
examples/: README.md  __init__.py  fixture_app.py
scripts/: consumer_integration_doctor.py  consumer_release_plan.py  consumer_shared_ui_cutover_audit.py  export_public_baseline.sh  visual_smoke.py
tests/: test_adapter_health.py  test_admin_access.py  test_admin_auth_pages.py  test_admin_list.py  test_availability_monitor.py  test_bridge_ops.py  test_command_intake.py  test_composition.py  test_consumer_release_plan.py  test_control_center.py  test_controls.py  test_cutover_audit.py  test_dashboard.py  test_detail_dossier.py  test_doctor.py  test_fixture_app.py  test_imports.py  test_infrastructure_posture.py  test_journal.py  test_people.py  (+16 more)
(+97 files in other folders)
