[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personacore"
version = "1.0.5"
description = "Reusable admin console shell, dashboard primitives, navigation, and style system for persona runtimes."
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/AznIronMan/PersonaCore"
Repository = "https://github.com/AznIronMan/PersonaCore"

[project.optional-dependencies]
fastapi = [
  "fastapi>=0.110",
]
test = [
  "pytest>=8",
]
visual = [
  "playwright>=1.45",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
persona_console = [
  "static/*.css",
  "static/*.js",
  "templates/persona_console/*.html",
]
